fix word wrapping in column header

--- a/app/frontend/src/components/Brackets.css
+++ b/app/frontend/src/components/Brackets.css
@@ -243,10 +243,6 @@
   height: 100%;
 }
 
-.est-seed-header {
-  white-space: nowrap;
-}
-
 .est-seed-info {
   margin-left: 0.4em;
 }
